# vottun-qubic-bridge-sc-qubic

./: .gitignore  .gitmodules  CMakeLists.txt  CONFIG.md  README.md
contracts/: QubicOrderContract.h
test/: QubicOrderContractTest.cpp
